--- a/Views/Lokasi/Edit.cshtml
+++ b/Views/Lokasi/Edit.cshtml
@@ -27,6 +27,12 @@
   </div>
 
   <div class="row">
+    <div class="mb-3">
+      <label class="form-label">Detail Nama Lokasi (opsional)</label>
+      <input asp-for="DetailNamaLokasi" class="form-control"
+        placeholder="Contoh: Gedung B / Lantai 3 / Blok A2 / Gudang Barat" />
+    </div>
+
     <div class="col-md-6 mb-3">
       <label class="form-label">Latitude</label>
       <input asp-for="lat" type="text" class="form-control" data-val="false" inputmode="decimal" step="any" />
