--- a/Views/RolePetugas/Index.cshtml
+++ b/Views/RolePetugas/Index.cshtml
@@ -119,7 +119,7 @@
                             <table class="table table-hover align-middle" id="roleTable">
                                 <thead class="table-light sticky-head">
                                     <tr>
-                                        <th width="70">ID</th>
+                                        @* <th width="70">ID</th> *@
                                         <th width="260">Nama Role</th>
                                         <th width="220">Interval</th>
                                         <th width="120">Status</th>
@@ -137,7 +137,7 @@
                                         var rowClass = x.IsActive ? "row-aktif" : "row-nonaktif";
 
                                         <tr class="@rowClass" data-interval="@intervalLabel" data-status="@statusLabel">
-                                            <td>@x.Id</td>
+                                            @* <td>@x.Id</td> *@
                                             <td class="fw-semibold">@x.NamaRole</td>
                                             <td>
                                                 @if (!string.IsNullOrWhiteSpace(intervalLabel))
