Fix: soft delete btn & bersih-bersih debug id di index

--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -318,11 +318,11 @@
                             <table class="table table-hover align-middle mb-0">
                                 <thead class="table-light sticky-head">
                                     <tr>
-                                        <th scope="col">
-                                            @* <a class="@(sIdAct ? "sort-active" : "")" href="@sIdUrl">
+                                        @* <th scope="col"> *@
+                                        @* <a class="@(sIdAct ? "sort-active" : "")" href="@sIdUrl">
                                                 ID <span class="sort-caret">@(sIdAct? caret : "↕")</span>
                                             </a> *@
-                                        </th>
+                                        @* </th> *@
                                         <th scope="col">
                                             <a class="@(sNamaAct ? "sort-active" : "")" href="@sNamaUrl">
                                                 Nama <span class="sort-caret">@(sNamaAct? caret : "↕")</span>
